feat: update marketing header + mobile nav

--- a/src/lib/styles/globals.css
+++ b/src/lib/styles/globals.css
@@ -9,6 +9,7 @@
   :root {
     --removed-body-scroll-bar-size: 0px;
     --shop-header-height: 84.5px;
+    --marketing-header-height: 84.5px;
   }
 
   body {
